# oxcart

./: .gitignore  LICENSE  README.md  cross_file.txt  env.sh  meson.build  notes.txt  oxcart_devices.ods  remote_install.sh
Documents/: mag_comp.csv
analysis/: mag_cal.txt  output.txt
apps/: gpspipe.cpp  mag_cal.cpp  meson.build  ox.sh  oxalgos.cpp  oxcart_d.cpp  oxclient.cpp
arduino/: requirements.txt
arduino/oxcart/: platformio.ini
arduino/oxcart/src/: oxcart.ino
include/: arduino_core.h  arduino_wire.h  blue_comm.h  command_proc.h  constants.h  conversion.h  gpsd_shm.h  key_mapper.h  named_store.h  ns.h  output.h  oxBlueDevice.h  oxGPSDDevice.h  oxGPSDbus.h  oxalgo.h  oxalgothread.h  oxapp.h  oxbluebus.h  oxbus.h  oxdev.h  oxi2cbus.h  oxi2cdevice.h  oxmem.h  trivial_log.h
include/algo/: MadgwickAHRS.h  airdata.h  average.h  checksum.h  kalman.h  linregres.h  misc_rate.h  polar.h  total_energy.h  turbulence.h  wind.h
include/devices/: ARDUINO_DISP.h  BMP085.h  GPS.h  KEYBOARD.h  KOBO.h  LIS3MDL.h  LSM6.h  NCURSES.h  TCA9548A.h
include/gpsd/: gpsd_config.h  revision.h
include/plog/: Record.h
python_tools/: mag_extract.py  yaw_test.py
src/: arduino_core.cpp  arduino_wire.cpp  blue_comm.cpp  command_proc.cpp  gpsd_shm.cpp  gpsdclient.cpp  key_mapper.cpp  main.cpp  meson.build  named_store.cpp  output.cpp  oxGPSDbus.cpp  oxalgo.cpp  oxalgothread.cpp  oxapp.cpp  oxbluebus.cpp  oxi2cbus.cpp  oxmem.cpp  smbus.cpp  trivial_log.cpp
src/algo/: MadgwickAHRS.cpp  airdata.cpp  checksum.cpp  linregres.cpp  meson.build  misc_rate.cpp  polar.cpp  total_energy.cpp  turbulence.cpp  wind.cpp
src/devices/: ARDUINO_DISP.cpp  BMP085.cpp  GPS.cpp  KEYBOARD.cpp  KOBO.cpp  LIS3MDL.cpp  LSM6.cpp  NCURSES.cpp  TCA9548A.cpp  meson.build
test/: meson.build  test_arduino_wire.cpp  test_named_store.cpp  test_output.cpp  test_oxalgo.cpp  test_oxalgothread.cpp  test_oxapp.cpp  test_oxblue.cpp  test_oxbus.cpp  test_oxdev.cpp  test_oxmem.cpp
test/algo/: meson.build  test_Madg.cpp  test_airdata.cpp  test_cksum.cpp  test_linregres.cpp  test_polar.cpp  test_turbulence.cpp  test_wind.cpp
test/devices/: meson.build  test_ALL_DEVICES.cpp  test_ARDUINO_DISP.cpp  test_BMP085.cpp  test_GPS.cpp  test_KEYBOARD.cpp  test_LIS3MDL.cpp  test_LSM6.cpp  test_NCURSES.cpp  test_TCA9548A.cpp
